kubernetes/apps/whoami/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
spec:
  hostnames:
    - whoami.mashu.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: whoami
          port: 80
